--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,18 @@ dependencies:
   firebase_storage:
   cloud_firestore: ^0.12.10
   firebase_auth: ^0.15.3
+  uuid:
+  flutter_email_sender: ^2.2.2
+  flare_flutter: ^2.0.1
+  flutter_sms: ^1.1.0
+  rflutter_alert: ^1.0.3
+  google_maps_flutter: ^0.5.21+15
+  geolocator: ^5.1.5
+  flutter_google_places: ^0.2.3
+  location: ^2.3.5
+  google_maps_webservice: ^0.0.16
+  modal_progress_hud: ^0.1.3
+  location_permissions: ^2.0.4+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -30,29 +42,23 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - assets/flares/
   #  - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
